finish event detail page

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -47,5 +47,13 @@
 }
 
 .menuContainer {
+  margin-top: 50px;
   text-align: center;
+}
+
+.reviewContainer {
+  margin: 100px 0;
+  ul {
+    list-style-type: none;
+  }
 }
