--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -53,7 +53,19 @@
 
 .reviewContainer {
   margin: 100px 0;
-  ul {
-    list-style-type: none;
+  .reviewsWrap{
+    ul {
+      list-style-type: none;
+      margin-top: 10px;
+    }
+  }
+ 
+  .reviewInputWrap {
+    margin-top: 80px;
+    .rating {
+      border-top-left-radius: 0px;
+      border-bottom-left-radius: 0px;
+      -webkit-appearance: none;
+    }
   }
 }
