fix layout of preview events

--- a/styles/HomePage.scss
+++ b/styles/HomePage.scss
@@ -54,6 +54,17 @@
       padding: 10px 15px;
       .hostAndDetailButton {
         margin-top: 50px;
+        .buttonWrap {
+          position: relative;
+          padding: 0;
+          button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+       
         .avatarImg {
           height: 70px;
           border-radius: 50%;
@@ -61,7 +72,9 @@
         .hostDetail {
           padding: 0 15px;
           p {
-            margin: 0;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
           }
         }
       }
