Updated search bar to redirect and render to new detail page on click

--- a/styles/_navBar.scss
+++ b/styles/_navBar.scss
@@ -12,5 +12,9 @@
 
 .dropdown-item.searchItem {
   padding: 0 0;
-  white-space: pre-wrap;
+  white-space: normal;
+}
+
+.form-control.navbar-searchbox {
+  margin-bottom: 10px;
 }
