--- a/styles/HomePage.scss
+++ b/styles/HomePage.scss
@@ -1,5 +1,10 @@
-.wrapper {
-  background-color: #606060;
+html {
+  background-color: #292d35;
+}
+
+.homeWrapper {
+  background-color: #292d35;
+  color: #292d35;
 }
 
 .homePageBanner {
@@ -12,13 +17,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     .homePageBannerSearchBox {
-      height: 70px;
-      width: 600px;
-      background-color: #000;
-      opacity: 0.75;
-      color: #fff;
-    }
-    .homePageBannerSearchButton {
+      width: 100%;
       height: 70px;
       background-color: #000;
       opacity: 0.75;
@@ -28,7 +27,7 @@
 }
 
 .search-title {
-  color: gold;
+  color: #292d35;
   text-align: center;
 }
 
