change review section style

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -52,13 +52,17 @@
 }
 
 .reviewContainer {
-  .rating {
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-    -webkit-appearance: none;
+  margin-top: 100px;
+  .reviewInputWrap {
+    margin-top: 50px;
+    .rating {
+      border-bottom-left-radius: 0;
+      border-top-left-radius: 0;
+      -webkit-appearance: none;
+    }
   }
-  margin: 100px 0;
   ul {
     list-style-type: none;
+    margin: 0;
   }
 }
