change event page banner style

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -4,6 +4,7 @@
 
 .eventBanner {
   padding-top: 100px;
+  background-color: #f9f9f9;
   .image {
     img {
       height: auto;
@@ -50,7 +51,7 @@
 
 .menuContainer {
   background-color: #f9f9f9;
-  margin-top: 50px;
+  padding-top: 50px;
   text-align: center;
   .triangleTop {
     width: 0;
