--- a/styles/HomePage.scss
+++ b/styles/HomePage.scss
@@ -83,10 +83,16 @@
           }
         }
 
-        .avatarImg {
+        .avatar {
           height: 70px;
+          width: 70px;
           border-radius: 50%;
+          overflow: hidden;
         }
+        .avatarImg {
+          height: 100%;
+        }
+
         .hostDetail {
           padding-left: 25px;
           p {
