rating system uses stars now instead of numbers

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -2,6 +2,14 @@
   padding: 0;
 }
 
+.dv-star-rating-star {
+  margin-bottom: 0;
+}
+
+.dv-star-rating {
+  top: 5px;
+}
+
 .eventBanner {
   padding-top: 100px;
   background-color: #f9f9f9;
