--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -30,18 +30,17 @@
       height: 60vh;
       padding: 0;
       .imagesSlider {
-        .clearText {
-          background-color: rgba($color: #000000, $alpha: 0.7);
-          padding: 0;
-          width: 100%;
-          left: 0;
-        }
         height: 300px;
         width: 300px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        .hostDetail {
+          h4 {
+            margin: 0;
+          }
+        }
       }
     }
     .eventInfo {
