--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -17,14 +17,18 @@
   margin-bottom: 0;
 }
 
+.image-carousel {
+  background-color: #292d35;
+}
+
+.w-75{
+  width: 100%;
+  height: 75vh;
+}
+
 .eventBanner {
-  padding-top: 100px;
-  .image {
-    img {
-      height: auto;
-      width: 100%;
-    }
-  }
+  padding-top: 90px; 
+
   .eventDetail {
     margin-top: 80px;
     .eventTitle {
