--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -21,13 +21,14 @@
   background-color: #292d35;
 }
 
+
 .w-75{
   width: 100%;
   height: 75vh;
 }
 
 .eventBanner {
-  padding-top: 90px; 
+  padding: 90px 0 0 0;
 
   .eventDetail {
     margin-top: 80px;
