--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -13,11 +13,19 @@
 .eventBanner {
   padding-top: 100px;
   background-color: #f9f9f9;
-  .image {
-    img {
-      height: auto;
-      width: 100%;
-    }
+  .carousel-inner .carousel-item-right.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(33.33%);
+  }
+  
+  .carousel-inner .carousel-item-left.active, 
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-33.33%)
+  }
+    
+  .carousel-inner .carousel-item-right,
+  .carousel-inner .carousel-item-left{ 
+    transform: translateX(0);
   }
   .eventDetail {
     margin-top: 80px;
