Updated SQL query to format data correctly, and moved to EventHelpers to be passed into differing search routes

--- a/styles/_navBar.scss
+++ b/styles/_navBar.scss
@@ -16,6 +16,7 @@
 .dropdown-item.searchItem {
   padding: 0 0;
   white-space: normal;
+  text-align: center;
 }
 
 .dropdown-item.searchItem:hover {
