--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,4 +3,8 @@
 @import "EventPage";
 @import "UserProfile";
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+body {
+  font-family: 'Open Sans', sans-serif;  
+}
