--- a/styles/_navBar.scss
+++ b/styles/_navBar.scss
@@ -14,6 +14,17 @@
   opacity: 0.95;
 }
 
+.logo-photo {
+  width: 50px;
+  height: 50px;
+}
+
+.logo-bundle {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+}
+
 .navbar-brand.logo {
   font-family: 'Pacifico', cursive;
   font-size: xx-large;
