added user bio form if they havent added one on their profile page and dynamically displays the bio

--- a/styles/UserProfile.scss
+++ b/styles/UserProfile.scss
@@ -27,6 +27,10 @@
   border-bottom: 2px solid rgb(158, 157, 157);
 }
 
+.user-profile-header {
+ padding-top: 100px;
+}
+
 $text-color: #212529;
 
 .hosted-event {
