changed review post front end function to properly map to the right user and added success message

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -21,6 +21,18 @@
   background-color: #292d35;
 }
 
+.post-review {
+  background-color: skyblue;
+  color: White;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
 
 .w-75{
   width: 100%;
