Added dividers underneath events in user page

--- a/styles/HomePage.scss
+++ b/styles/HomePage.scss
@@ -143,8 +143,13 @@
   border-color: #c5700f;
 }
 
+.title-divider {
+  margin-top: 0;
+}
+
 .preview-event-title {
  font-size: x-large;
+ margin-bottom: .1em;
 }
 
 .hidden {
